@@ -21,6 +21,7 @@ import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.RadioButton;
 import javafx.scene.control.TextField;
+import javafx.scene.control.ToggleGroup;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.HBox;
@@ -39,20 +40,19 @@ import org.example.features.ingredients.Ingredient;
 import org.example.features.order.OrderService;
 import org.example.features.order.ProductQuantity;
 import org.example.shared.SceneRouter;
-import javafx.scene.control.ToggleGroup;
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /** The type Checkout controller. */
 public class CheckoutController implements Initializable {
 
+  private static final Logger log = LoggerFactory.getLogger(CheckoutController.class);
   private final OrderService orderService;
   private final CouponsRepository couponsRepository;
   private final CampaignRepository campaignRepository;
+  private final SceneRouter router;
   private List<Campaign> campaigns = new ArrayList<>();
   private int currentCampaignIndex = 0;
-  private Timeline campaignTimeline;
-
-  private final SceneRouter router;
   @FXML private Label itemCountLabel;
   @FXML private Label totalPriceLabel;
   @FXML private VBox itemListContainer; // Changed from ListView to VBox
@@ -61,22 +61,24 @@ public class CheckoutController implements Initializable {
   @FXML private RadioButton noPrint;
   @FXML private StackPane campaignCardPane;
 
-
   /**
    * Instantiates a new Checkout controller.
    *
    * @param orderService the order service
    * @param sceneRouter the scene router
    */
-  public CheckoutController(OrderService orderService, CouponsRepository couponsRepository, SceneRouter sceneRouter, CampaignRepository campaignRepository) {
+  public CheckoutController(
+      OrderService orderService,
+      CouponsRepository couponsRepository,
+      SceneRouter sceneRouter,
+      CampaignRepository campaignRepository) {
     this.orderService = orderService;
     this.couponsRepository = couponsRepository;
     this.router = sceneRouter;
     this.campaignRepository = campaignRepository;
   }
-  
+
   // Closing brace for the CheckoutController class
-  
 
   /** Goes to the login page. */
   public void goToMemberLogin() {
@@ -92,23 +94,18 @@ public class CheckoutController implements Initializable {
     boolean shouldPrint = yesPrint.isSelected();
     boolean shouldNoPrint = noPrint.isSelected();
 
-    if (shouldPrint && !shouldNoPrint) {
+    if (shouldPrint) {
       orderService.setReceipt();
       printReceipt();
     }
 
-    if (shouldNoPrint && !shouldPrint) {
+    if (!shouldPrint) {
       System.out.println("Receipt will not be printed — user selected 'No'.");
       printReceipt();
-    }
-
-    else{
+    } else {
       System.out.println("Select only one option");
     }
-
-
   }
-
 
   /** Goes to the home/menu page. */
   public void goToMenuPage() {
@@ -141,35 +138,37 @@ public class CheckoutController implements Initializable {
   private HBox createItemBox(ProductQuantity item) {
     HBox container = new HBox();
     container.setPadding(new Insets(15, 20, 15, 20));
-    container.setStyle("-fx-background-color: white; -fx-border-radius: 8; -fx-border-color: #ddd;");
+    container.setStyle(
+        "-fx-background-color: white; -fx-border-radius: 8; -fx-border-color: #ddd;");
     container.setAlignment(Pos.CENTER_LEFT);
     container.setPrefWidth(1080);
 
     // Create the item name label (bold and navy)
-    Label nameLabel = new Label(item.getCustomizedProduct().getProduct().getName());
+    Label nameLabel = new Label(item.getCustomizedProduct().getProduct().getName() + " x" + item.getQuantity());
     nameLabel.setFont(Font.font("Arial", javafx.scene.text.FontWeight.BOLD, 20));
     nameLabel.setTextFill(Color.valueOf("#1E1EA9"));
 
     // Create the price label (light gray and smaller)
-    Label priceLabel = new Label(String.format("$%.2f", item.getCustomizedProduct().getTotalPrice()));
+    Label priceLabel =
+        new Label(String.format("$%.2f", item.getCustomizedProduct().getTotalPrice()));
     priceLabel.setFont(Font.font("Arial", 14));
     priceLabel.setTextFill(Color.valueOf("#777777"));
 
     VBox ingredientDiffBox = new VBox();
     ingredientDiffBox.setSpacing(3);
     Map<Ingredient, Integer> ingredients = item.getCustomizedProduct().getIngredientquanities();
-    Map<Ingredient, Integer> defaultings = item.getCustomizedProduct().getProduct().getIngredients();
-    
-    for (Ingredient ingredient: defaultings.keySet() ){
-      int quantity = ingredients.getOrDefault(ingredient, 0);
-      int defaultQty = defaultings.get(ingredient);
+    Map<Ingredient, Integer> defaultIngredients =
+        item.getCustomizedProduct().getProduct().getIngredients();
 
-      if(quantity != defaultQty) {
+    for (Ingredient ingredient : defaultIngredients.keySet()) {
+      int quantity = ingredients.getOrDefault(ingredient, 0);
+      int defaultQty = defaultIngredients.get(ingredient);
+
+      if (quantity != defaultQty) {
         String ingLabel;
         if (quantity > defaultQty) {
           ingLabel = "+" + (quantity - defaultQty) + " " + ingredient.getName();
-        }
-        else{
+        } else {
           ingLabel = "-" + (defaultQty - quantity) + " " + ingredient.getName();
         }
 
@@ -177,7 +176,6 @@ public class CheckoutController implements Initializable {
         IngredientLabel.setFont(Font.font("Arial", javafx.scene.text.FontWeight.BOLD, 12));
         ingredientDiffBox.getChildren().add(IngredientLabel);
       }
-
     }
     // Create a VBox to group name and price vertically
     VBox textContainer = new VBox(nameLabel, priceLabel, ingredientDiffBox);
@@ -188,23 +186,28 @@ public class CheckoutController implements Initializable {
     Button decreaseButton = new Button("-");
 
     // Style the buttons
-    String buttonStyle = "-fx-background-color:#1E1EA9; -fx-text-fill: white; -fx-background-radius: 6; " +
-        "-fx-cursor: hand; -fx-font-size: 14px; -fx-font-weight: bold;";
+    String buttonStyle =
+        "-fx-background-color:#1E1EA9; -fx-text-fill: white; -fx-background-radius: 6; "
+            + "-fx-cursor: hand; -fx-font-size: 14px; -fx-font-weight: bold;";
     increaseButton.setStyle(buttonStyle);
     decreaseButton.setStyle(buttonStyle);
 
     increaseButton.setPrefSize(30, 30);
     decreaseButton.setPrefSize(30, 30);
 
-    increaseButton.setOnAction(event -> {
-      orderService.addItem(item.getCustomizedProduct().getProduct(), item.getCustomizedProduct().getIngredientquanities());
-      updateCartDisplay();
-    });
+    increaseButton.setOnAction(
+        event -> {
+          orderService.addItem(
+              item.getCustomizedProduct().getProduct(),
+              item.getCustomizedProduct().getIngredientquanities());
+          updateCartDisplay();
+        });
 
-    decreaseButton.setOnAction(event -> {
-      orderService.removeItem(item.getCustomizedProduct().getProduct(), new HashMap<>());
-      updateCartDisplay();
-    });
+    decreaseButton.setOnAction(
+        event -> {
+          orderService.removeItem(item.getCustomizedProduct().getProduct(), new HashMap<>());
+          updateCartDisplay();
+        });
 
     // Right-aligned buttons
     HBox buttonBox = new HBox(5, decreaseButton, increaseButton);
@@ -218,6 +221,7 @@ public class CheckoutController implements Initializable {
     container.getChildren().addAll(textContainer, spacer, buttonBox);
     return container;
   }
+
   public void applyCoupon() {
     String coupon = couponCodeField.getText();
     if (coupon == null || coupon.isEmpty()) {
@@ -225,18 +229,15 @@ public class CheckoutController implements Initializable {
     }
     Optional<Coupons> disc;
 
-    try{
+    try {
       disc = couponsRepository.findById(coupon);
-    } catch (SQLException e)
-    {
+    } catch (SQLException e) {
       throw new RuntimeException("Failed to get coupon from database");
     }
-    disc.ifPresentOrElse(
-        orderService::setDiscount,
-        () -> couponNotFoundAlert().showAndWait()
-    );
+    disc.ifPresentOrElse(orderService::setDiscount, () -> couponNotFoundAlert().showAndWait());
     totalPriceLabel.setText(String.format("Total: $%.2f", orderService.getTotal()));
   }
+
   private void printReceipt() {
     System.out.println("Printing receipt...");
     router.goToMemberLoginPage();
@@ -254,7 +255,7 @@ public class CheckoutController implements Initializable {
     ToggleGroup printToggleGroup = new ToggleGroup();
     yesPrint.setToggleGroup(printToggleGroup);
     noPrint.setToggleGroup(printToggleGroup);
-
+    yesPrint.setSelected(true);
 
     int itemCount = orderService.getItems().size();
     itemCountLabel.setText("Items in cart: " + itemCount);
@@ -285,36 +286,35 @@ public class CheckoutController implements Initializable {
 
   private void loadCampaignsAndStartRotation() {
     try {
-        campaigns = campaignRepository.findActiveCampaigns();
+      campaigns = campaignRepository.findActiveCampaigns();
     } catch (Exception e) {
-        e.printStackTrace();
-        System.err.println("Failed to load campaigns: " + e.getMessage());
-        return;
+      log.debug("Failed to load campaigns: ", e);
+      log.error("Failed to load campaigns: {}", e.getMessage());
+      return;
     }
     if (!campaigns.isEmpty()) {
-        showCampaignCard(campaigns.get(0));
-        campaignTimeline = new Timeline(
-            new KeyFrame(Duration.seconds(10), event -> rotateCampaignCard())
+      showCampaignCard(campaigns.getFirst());
+      Timeline campaignTimeline =
+          new Timeline(new KeyFrame(Duration.seconds(10), event -> rotateCampaignCard()));
 
-        );
-        campaignTimeline.setCycleCount(Timeline.INDEFINITE);
-        campaignTimeline.play();
-    }else {
+      campaignTimeline.setCycleCount(Timeline.INDEFINITE);
+      campaignTimeline.play();
+    } else {
       campaignCardPane.getChildren().clear();
+    }
   }
-}
 
-private void rotateCampaignCard() {
+  private void rotateCampaignCard() {
     if (campaigns.isEmpty()) return;
     currentCampaignIndex = (currentCampaignIndex + 1) % campaigns.size();
     showCampaignCard(campaigns.get(currentCampaignIndex));
-}
+  }
 
-private void showCampaignCard(Campaign campaign) {
-  campaignCardPane.getChildren().clear();
-  String imageUrl = campaign.getImageUrl();
-  if (imageUrl != null && !imageUrl.isEmpty()) {
-    try {
+  private void showCampaignCard(Campaign campaign) {
+    campaignCardPane.getChildren().clear();
+    String imageUrl = campaign.getImageUrl();
+    if (imageUrl != null && !imageUrl.isEmpty()) {
+      try {
         ImageView img = new ImageView(new Image(imageUrl, 800, 320, false, false));
         img.setPreserveRatio(false);
         img.setSmooth(true);
@@ -322,7 +322,9 @@ private void showCampaignCard(Campaign campaign) {
         campaignCardPane.setPrefHeight(340);
         img.setStyle("-fx-effect: dropshadow(gaussian, #1E1EA9, 10, 0.5, 0, 0);");
         campaignCardPane.getChildren().add(img);
-      } catch (Exception ignored) {}
-  }
+      } catch (Exception e) {
+        log.error("Failed to load campaign image: {}", e.getMessage());
+      }
+    }
   }
 }
